@@ -1,7 +1,9 @@
 package marumasa.type_three_rpg.item;
 
-import marumasa.type_three_rpg.Minecraft;
 import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.TextComponent;
+import net.kyori.adventure.text.format.TextColor;
+import net.kyori.adventure.text.format.TextDecoration;
 import org.bukkit.Material;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.SmithingInventory;
@@ -9,11 +11,20 @@ import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.scheduler.BukkitRunnable;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class UpdateInventory extends BukkitRunnable {
-    private Minecraft mc;
-    List<Component> list = new ArrayList<>(List.of(Component.text("§fプログラムが付与されたアイテム")));
+    private static final List<String> LoreBase = new ArrayList<>(Arrays.asList(
+            "private static void use(Player player) {",
+            "    player.addPotionEffect(new PotionEffect(",
+            "            PotionEffectType.SPEED,",
+            "            20,",
+            "            0",
+            "    ));",
+            "}"
+    ));
+    private static final String explanation = "解説: 右クリックすると１秒間、移動速度レベル１が付与される";
 
     private final SmithingInventory smithingInventory;
 
@@ -32,7 +43,20 @@ public class UpdateInventory extends BukkitRunnable {
         ItemMeta resultMeta = result.getItemMeta();
         if (resultMeta == null) return;
 
-        resultMeta.lore(list);
+        final List<TextComponent> lore = new ArrayList<>();
+        for (String string : LoreBase) {
+            lore.add(Component.text(string).color(
+                    TextColor.color(255, 170, 0)).decoration(
+                    TextDecoration.ITALIC, false)
+            );
+        }
+        lore.add(Component.text(explanation).color(
+                TextColor.color(85, 255, 255)).decoration(
+                TextDecoration.ITALIC, false)
+        );
+
+
+        resultMeta.lore(lore);
 
         result.setItemMeta(resultMeta);
         smithingInventory.setResult(result);
